Implemented Radaelli comments Gd

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -93,7 +93,7 @@ The Mn spins inside the chains lie mostly along the fourfold symmetry axis of th
 
 \begin{figure}
 	\IncludeGraphics[width=0.9\textwidth]{unit_cell.png}
-	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} a) The magnetic unit cell with the zig-zag chains along the $a$-direction (cyan lines) denoting which Mn ions are linked by large AFM exchange, leading to the $\bm{L}_1$ and $\bm{L}_2$ N\'eel vectors used in the theoretical model (see Sec.~\ref{sec:GdMn2O5_Theory}). The boundary of the structural unit cell is marked by the black rectangle. The orange arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$ in the model. The two sources of the symmetric Heisenberg exchange striction are shown in (b) and (c). The black arrows indicate the zero-field orientation of the spins, and the yellow and blue arrows denote the expanding and contracting bonds, respectively. The resulting polarization $P_b$ is shown by the large yellow arrow  in panel (a).}
+	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} a) The magnetic unit cell with the AFM zig-zag chains along the $a$-direction (cyan lines) denoting which Mn ions are linked by large AFM exchange, leading to the blue $\bm{L}_1$ and $\bm{L}_2$ N\'eel vectors used in the theoretical model (see Sec.~\ref{sec:GdMn2O5_Theory}). The boundary of the structural unit cell is marked by the black rectangle. The orange arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$ in the model. The two sources of the symmetric Heisenberg exchange striction are shown in (b) and (c). The black arrows indicate the zero-field orientation of the spins, and are correspondingly marked on the full structure in (a). The yellow and blue arrows in (b) and (c) denote the expanding and contracting bonds, respectively. The resulting polarization $P_b$ is shown by the large yellow arrow in panel (a).}
 \end{figure}
 The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction due to the strong AFM exchanges combined with the geometric frustration of the Mn chains~\cite{Choi2008}.
 This frustration appears due to the odd number of AFM bonds in the Mn pentagons surrounding each Gd ion, similar to an AFM triangular lattice, which does not allow for all the AFM exchanges to be satisfied simultaneously (i.e. by having completely antiparallel spins on each AFM bond).
@@ -117,12 +117,11 @@ when the magnetic order sets in below $T_N$. Thus, AFM bonds ($J > 0$) with anti
 In the case of $R$Mn$_2$O$_5$, this causes the octahedrally coordinated Mn$^{4+}$ ion to shift towards one of the two neighboring Mn$^{3+}$ pyramids in the Mn$^{3+}$ -- Mn$^{4+}$ -- Mn$^{3+}$ sequences, as demonstrated in Fig.~\ref{fig:GdMn2O5_unit_cell}(b).
 As mentioned before, this causes a lowering of the symmetry from P$bam$ to P$_ab2_1a$, and, as the Born effective charges of the Mn$^{3+}$ and Mn$^{4+}$ ions differ, to a nonzero polarization along the $b$-axis~\cite{Khomskii2009}.
 It was shown, however, that this ionic displacement is largely compensated when electronic correlation effects are taken into account.
-These lead to an additional increase of the electronic charge between the ions, which almost fully cancels the positive contribution to the polarization due to the ionic displacement.
+These lead to an additional increase of the electronic charge between the ions, which almost fully cancels the positive contribution to the polarization due to the ionic displacement, resulting ultimately in the relatively small values of the polarization ($P_b\sim 10^3 \mu $C/m$^2$ without correlations, rather than $\sim 10^4 \mu $C/m$^2$ with correlations) \cite{Giovannetti2008}.
 
 There is a second source of polarization in GdMn$_2$O$_5$, also due to the symmetric Heisenberg exchange striction, but this time between the spins of Gd and Mn~\cite{Lee13}.
 All the exchanges between Gd and the surrounding Mn ions are again AFM.
 A similar train of thought can then be followed as before, causing the bonds with parallel spins to extend and those with antiparallel spins to contract (see Fig.~\ref{fig:GdMn2O5_unit_cell}(c)).
-This contribution does not suffer from the same cancellation between ionic displacements and electronic charge due to correlation effects and leads to the majority of the ferroelectric polarization.
 
 Gd$^{3+}$ is special compared with the other magnetic rare-earth ions in the $R$Mn$_2$O$_5$ family because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched orbital angular momentum and associated anisotropic charge distribution (as discussed profusely in the Rashba chapter~\ref{ch:Rashba}). This means that the large spin (nominally $S=7/2$) can orient itself freely to optimize the magnetic interactions with its neighboring Mn atoms, without incurring any penalties through the atomic SOC combined with nonzero OAM.
 This leads to a high magnetic susceptibility and associated magnetoelectric effect, surpassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to 5000\,$\mu$ C/m$^2$ when a magnetic field is applied~\cite{Lee13}. 
@@ -439,6 +438,7 @@ We thus turn to a more careful investigation of the barriers, first by studying 
 \end{figure}
 %
 The Nudged Elastic Band calculations are a way to track how the low points of the valley in Fig.~\ref{fig:GdMn2O5_heatmap} change for different field strengths.
+This is done by taking two extremal states, then constructing a set of images that interpolate in phase space between these two states. The total energy of the entire chain is then optimized using a small elastic-like energy term that binds the images together, so that they find the lowest energy barrier between the two states.  
 Similar to the previous discussion, we track the evolution of the system starting in state 1, indicated at the far left of Fig.~\ref{fig:GdMn2O5_neb}(a).
 In the following we use {\it ij} to denote the energy barrier between states i and j.
 
@@ -499,7 +499,7 @@ The Gd spins that are coupled strongest to this chain perform a similar rotation
 Indeed, focusing on the highlighted spins in Fig.~\ref{fig:GdMn2O5_4configs}, we see that the chains rotate with increments of around 90$^\circ$ between the states, performing a full 360$^\circ$ rotation by the time they arrive back at the original configuration.
 \begin{figure}[h!]
 	\IncludeGraphics{spin_configs}
-	\caption{{\bf Spin configurations for different field angles and values.} The green arrows denote the AFM order parameter orientations during the field sweep (a) where the color gradients (red to blue) in panels (b-f) correspond to the field value of $\bm{H}$ in panel (a). The microscopic spin configuration of the cycle in panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field. \label{fig:GdMn2O5_regimes}}  
+	\caption{{\bf Magnetic switching behavior for different magnetic field angles.} a) The time evolution of the magnetic field strength, where the color gradient encodes the time, corresponding to the color gradients found in the other panels. Two graphs are shown to indicate that the behaviors displayed in panels (b-f) does not depend on which of the branches is followed. The grey dotted line denotes the switching field. (b-f) The switching behavior of $\bm L_1$ and $\bm L_2$ for various angles of the applied magnetic field, ranging between +20$^\circ$ in (b) and -20$^\circ$ in (f). The green arrows denote the AFM order parameter orientations during the field sweep in (a), where the color gradients (red to blue) corresponds to the same timing as shown in panel (a). The microscopic spin configuration of the magic angle regime in panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field. \label{fig:GdMn2O5_regimes}}  
 \end{figure}
 This peculiar ``crankshaft''-like behavior is a direct result of the evolution of the energy minima and barriers as discussed in the previous section.
 We use this crankshaft analogy because the material seemingly converts the linear up--down motion of the magnetic field (the ``piston'') into the circular motion performed by the spins (the ``driveshaft'').
