--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6832,3 +6832,17 @@ volume = {104},
 year = {2000}
 }
 
+@article{Giovannetti2008,
+abstract = {We show that electronic correlations decimate the intrinsic ferroelectric polarization of multiferroic manganites RMn2O5, where R is a rare earth element. Such is manifest from ab initio band structure computations that account for the Coulomb interactions between the manganese 3d electrons-the root of magnetism in RMn2O5. Including these leads to an amplitude and direction of polarization of HoMn2O5 that agree with experiment. The decimation is caused by a near cancellation of the ionic polarization induced by the lattice and the electronic one due to valence charge redistributions. {\textcopyright} 2008 The American Physical Society.},
+author = {Giovannetti, Gianluca and {Van Den Brink}, Jeroen},
+url = {https://dx.doi.org/10.1103/PhysRevLett.100.227603},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Giovannetti, Van Den Brink - 2008 - Electronic correlations decimate the ferroelectric polarization of multiferroic HoMn2O5.pdf:pdf},
+issn = {00319007},
+journal = {Physical Review Letters},
+number = {22},
+pages = {2--5},
+title = {{Electronic correlations decimate the ferroelectric polarization of multiferroic HoMn2O5}},
+volume = {100},
+year = {2008}
+}
+
