implemented Radaelli comments on Cr

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -34,17 +34,17 @@ A thin film (28 nm) of Cr was used, supporting around seven periods of the SDW w
 The experimental procedure is depicted schematically in Fig.~\ref{fig:Cr_schematic}(a). 
 \begin{figure}[h]
 	\IncludeGraphics{schematic}
-\caption{\label{fig:Cr_schematic}{\bf Experimental methods} a) Schematic of the experimental setup where two optical pump pulses are applied to the SDW at $t=\tau_1,\tau_2$, leading to an oscillation of the PLD which is probed through the XFEL. The heat from the pulses is subsequently transferred from the SDW to the heat bath, cooling down the SDW. b) Pictorial representation and experimental measurement of the Bragg peaks and Laue fringes associated with the thin film and PLD, probed by the XFEL.}
+\caption{\label{fig:Cr_schematic}{\bf Experimental methods} a) Schematic of the experimental setup where two optical pump pulses are applied to the SDW at $t=\tau_1,\tau_2$, leading to an oscillation of the PLD which is probed through the XFEL. The heat from the pulses is subsequently transferred from the SDW to the heat bath, cooling down the SDW. b) Schematic representation of X-ray diffraction measurements in panel (c). The (002) peak is the central Bragg peak with the ellipses representing the Laue fringes due to the thin film geometry. Here $\bm q=4\pi/\lambda \sin(\theta)$ is the scattering vector with $\lambda$ being the x-ray wavelength. The central peak is weaker than the fringes due to the position of the Ewald sphere, as depicted by the blue line in (b).}
 \end{figure}
 The film was illuminated by two sequential 40 fs optical pulses at times $\tau_1$ and $\tau_2$, heating up the electronic subsystem and, consequently, the SDW.
 The film thickness was chosen to be smaller than the optical skin depth of Cr, meaning that the pulses excite the entire volume of the sample homogeneously.
 
-The PLD is pinned by the boundary conditions of the thin film, enforcing a half-integer number of periods along the depth of our sample.
-Since the PLD describes displacements of the Cr ions, its amplitude can be directly probed by measuring the intensity of the corresponding Laue fringe with an x-ray free-electron laser (XFEL), \cite{Singer2015prb, Singer2015prl}, as shown in Fig.~\ref{fig:Cr_schematic}(b).
+The PLD is pinned by the boundary conditions of the thin film, enforcing a half-integer number of periods along the depth of the sample (seven in our case)\cite{Soh2011,Singer2016,Singer2015prb}.
+Using an x-ray free-electron laser (XFEL), the magnitude of the PLD, i.e. Cr ion displacements, can be probed directly by measuring the intensity the Laue fringe that corresponds with the well-defined wavevector of the PLD \cite{Singer2015prb, Singer2015prl}, as shown in Fig.~\ref{fig:Cr_schematic}(b-c), where the PLD Laue fringe is highlighted by the red box. 
 The high peak selectivity that is achievable by XFELs allows us to resolve very narrow Bragg peaks or Laue fringes. 
 This in turn makes accurate measurements on thin films accessible, even if they are deposited on thick substrates whose Bragg peaks would normally overpower the thin film signatures.
-The scattering intensity of the fringe associated with the PLD is highlighted by the red box in Fig.~\ref{fig:Cr_schematic}(b).
-Due to the pinning of the PLD to the boundaries of the thin film, its phase can be obtained from the interference between its corresponding peaks and those that originate from the thin film geometry \cite{Singer2015prb}.
+To further increase the contrast of the PLD peak, the Ewald sphere is tilted along a particular direction, as indicated by the blue line in Fig.~\ref{fig:Cr_schematic}(b).
+Furthermore, again due to the pinning of the PLD to the boundaries of the thin film, its phase can be obtained from the interference between its corresponding fringe peaks and those that originate from the thin film geometry \cite{Singer2015prb}.
 This allows us to track the time evolution of the amplitude and phase of the PLD, giving us access to its dynamics that appear as a result of the applied pulses to the SDW.
 
 The sets of measurements that form the starting point for our further investigation are displayed in Figs.~\ref{fig:Cr_experimental1} and ~\ref{fig:Cr_experimental2}.
@@ -52,16 +52,17 @@ It is important to realize that the SDW order is not directly accessible through
 \begin{figure}
 	\centering
 \IncludeGraphics{experimental1}
-\caption{\label{fig:Cr_experimental1}{\bf Pump-Pump delay-dependent interference.} a) Experimental map of PLD amplitude before and after excitation of two pulses with a fluence of 1.45 mJ/cm$^2$. The green box highlights the area of lower oscillation amplitude of the PLD when the temperature of the SDW exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of the second pulse. The dots denote the experimentally measured values, and the graphs the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for further details).}
+\caption{\label{fig:Cr_experimental1}{\bf Pump-Pump delay-dependent interference.} a) Experimental map of PLD amplitude before and after excitation of two pulses with a fluence of 1.45 mJ/cm$^2$. The green box highlights the area of lower oscillation amplitude of the PLD when the temperature of the SDW exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. The blue graph in the inset demonstrates how the evolution would be without the second pulse. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of the second pulse. The dots denote the experimentally measured values, and the graphs the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for more details).}
 \end{figure}
 \begin{figure}
 	\centering
 \IncludeGraphics[width=0.78\textwidth]{experimental2}
-\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of the second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
+\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, with pump spacing similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red lines mark the arrival time of the second pulse in each experiment. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
 \end{figure}
 
+We first focus on Fig.~\ref{fig:Cr_experimetal1}(a), where the PLD amplitude is represented as a heatmap with on the x-axis the time evolution, and on the y-axis the delay between the two consecutive pumps by optical pulses. The y-axis basically shows many experiments such as the ones in panel (b) and (c) of the same figure. Consequently, the blue and purple line demonstrate the horizontal slice corresponding to the measurement highlighted by the box with the same color.  
 We can observe that the PLD has an oscillation time period of approximately 450 fs, and a damping time of around 3 ps.
-In panel (a) of Fig.~\ref{fig:Cr_experimental1}, the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period indicates the fast restoration of the oscillation equilibrium. 
+Still in Fig.~\ref{fig:Cr_experimental1}(a), the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period indicates the fast restoration of the oscillation equilibrium. 
 This means that the heat transfer rate between the electrons that constitute the SDW and the bath is relatively high, leading to a thermalization between the two within a picosecond after heating.
 This partially restores the SDW which in turn leads to the partial restoration of the oscillation equilibrium.
 Further thermalization between the Cr lattice and the substrate occurs on a nanosecond timescale, beyond the scope of these experiments.
@@ -84,8 +85,8 @@ If control is the goal, it is thus important that the SDW is allowed to cool dow
 The SDW order parameter, furthermore, depends strongest on temperature when it is close to the critical point where it varies as the square root, thus increasing the pulse efficiency in that temperature region.
 These considerations will be discussed in greater detail in section~\ref{sec:Cr_results}, after the theoretical description is given.
 
-Finally, the measurements demonstrate an absence of topological defects since the satellite fringe associated with the PLD (Fig.~\ref{fig:Cr_schematic}(b)) does not widen compared to the peak associated with the sample itself.
-This supports our previous claim that the optical pulses excite the thin film homogeneously. 
+Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the PLD (Fig.~\ref{fig:Cr_schematic}(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single SDW wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the XFEL pulses had a diameter of 0.2 mm, w hich envelopes multiple SDW domains in the plane of the film\cite{Nicholson2016}, making the measurements statistical over domains.
+These considerations also support our previous claim that the optical pulses can be assumed to excite the thin film homogeneously. 
 \section{Theory \label{sec:Cr_model}}
 % \lp{some explanation of Peierls instabilities etc, the things that cause the SDW in the first place?}
 
