--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6846,3 +6846,35 @@ volume = {100},
 year = {2008}
 }
 
+@article{Soh2011,
+abstract = {Magnetic domains and the walls between are the subject of great interest because of the role they play in determining the electrical properties of ferromagnetic materials and as a means of manipulating electron spin in spintronic devices. However, much less attention has been paid to these effects in antiferromagnets, primarily because there is less awareness of their existence in antiferromagnets, and in addition they are hard to probe since they exhibit no net magnetic moment. In this paper, we discuss the electrical properties of chromium, which is the only elemental antiferromagnet and how they depend on the subtle arrangement of the antiferromagnetically ordered spins. X-ray measurement of the modulation wavevector Q of the incommensurate antiferromagnetic spin-density wave shows thermal hysteresis, with the corresponding wavelength being larger during cooling than during warming. The thermal hysteresis in the Q vector is accompanied with a thermal hysteresis in both the longitudinal and Hall resistivity. During cooling, we measure a larger longitudinal and Hall resistivity compared with when warming, which indicates that a larger wavelength at a given temperature corresponds to a smaller carrier density or equivalently a larger antiferromagnetic ordering parameter compared to a smaller wavelength. This shows that the arrangement of the antiferromagnetic spins directly influences the transport properties. In thin films, the sign of the thermal hysteresis for Q is the same as in thick films, but a distinct aspect is that Q is quantized.},
+author = {Soh, Yeong-Ah and Kummamuru, Ravi K.},
+doi = {10.1098/rsta.2011.0186},
+file = {:home/ponet/Downloads/rsta.2011.0186.pdf:pdf},
+issn = {1364-503X},
+journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+keywords = {Antiferromagnets,Quantization,Spin-density wave,Spintronics},
+month = {sep},
+number = {1951},
+pages = {3646--3657},
+pmid = {21859727},
+title = {{Spintronics in antiferromagnets}},
+url = {https://royalsocietypublishing.org/doi/10.1098/rsta.2011.0186},
+volume = {369},
+year = {2011}
+}
+
+@article{Singer2016,
+abstract = {We study the temperature dependence of the charge density wave (CDW) in a chromium thin film using x-ray diffraction. We exploit the interference between the CDW satellite peaks and Laue oscillations to determine the amplitude, the phase, and the period of the CDW. We find discrete half-integer periods of CDW in the film and switching of the number of periods by one upon cooling/heating with a thermal hysteresis of 20 K. The transition between different CDW periods occurs over a temperature range of 30 K, slightly larger than the width of the thermal hysteresis. A comparison with simulations shows that the phase transition occurs as a variation of the volume fraction of two distinct phases with well-defined periodicities. The phase of the CDW is constant for all temperatures, and we attribute it to strong pinning of the CDW by the mismatch-induced strain at the film-substrate interface.},
+author = {Singer, A. and Patel, S. K.K. and Uhl{\'{i}}ř, V. and Kukreja, R. and Ulvestad, A. and Dufresne, E. M. and Sandy, A. R. and Fullerton, E. E. and Shpyrko, O. G.},
+doi = {10.1103/PhysRevB.94.174110},
+file = {:home/ponet/Downloads/PhysRevB.94.174110.pdf:pdf},
+url  = {https://link.aps.org/doi/10.1103/PhysRevB.94.174110},
+journal = {Physical Review B},
+number = {17},
+pages = {1--5},
+title = {{Phase coexistence and pinning of charge density waves by interfaces in chromium}},
+volume = {94},
+year = {2016}
+}
+
