--- a/papers/reports/Radaelli_comments.tex
+++ b/papers/reports/Radaelli_comments.tex
@@ -63,12 +63,42 @@ I have added a small description to the text:
 The Nudged Elastic Band calculations are a way to track how the low points of the valley in Fig.~\ref{fig:GdMn2O5_heatmap} change for different field strengths.
 This is done by taking two extremal states, then constructing a set of images that interpolate in phase space between these two states. The total energy of the entire chain is then optimized using a small elastic-like energy term that binds the images together, so that they find the lowest energy barrier between the two states.  
 \\\\
-{\bf Page 54, Fig.~3.10}~{\it I found this figure (especially the `squiggles' in panels b to f) extremely confusing. I am not sure it adds much, so I would consider omitting, but a better caption is certainly in order.}
+{\bf Page 54, Fig.~3.10:}~{\it I found this figure (especially the `squiggles' in panels b to f) extremely confusing. I am not sure it adds much, so I would consider omitting, but a better caption is certainly in order.}
 \\\\
 This figure was made in an attempt to summarize all the possible switching behaviors that can be found in the material. The squiggles are a way to demonstrate how the evolution of the AFM order parameter happens when the field is swept up and down, with the color gradient of panel (a) encoding the time evolution, which corresponds to the gradient of the squiggles.
 
 I have changed the caption in an attempt to be more clear.
 \\\\
-{\bf Page 65, Fig.~4.1}~{\it }
+{\bf Page 65, Fig.~4.1:}~{\it The discussion of the diffraction data, especially panel b) is rather confusing:
+what are the ‘blobs’ we are looking at (finite-size fringes mixed with superlattice peaks?) This may
+be clear from the related publications but not here.}
+\\\\
+I have added a little more explanation in the main text, updated the schematic figure in panel b, and added additional information to the caption of the figure.
+\\\\
+{\bf Page 66, Fig.~4.2:}~{\it Perhaps a qualitative introduction to panel a) in this figure could help. I now understand what is going on, but I must admit it took me a while. Also, please provide the
+reference to the publication in the figure caption, both here and elsewhere.}
+\\\\
+I have added the following qualitative description to the main text:
+``We first focus on Fig.~\ref{fig:Cr_experimetal1}(a), where the PLD amplitude is represented as a heatmap with on the x-axis the time evolution, and on the y-axis the delay between the two consecutive pumps by optical pulses. The y-axis basically shows many experiments such as the ones in panel (b) and (c) of the same figure. Consequently, the blue and purple line demonstrate the horizontal slice corresponding to the measurement highlighted by the box with the same color.''
+
+The publication with the figure is in the final stages of publishing, I will add the reference as soon as it is fully accepted.
+\\\\
+{\bf Page 67, Fig.~4.3:}~{\it The caption states `The dashed red line marks...’ but there are two dashed red lines...}
+
+This should have been plural, this panel is meant to demonstrate that when the first pulse is so intense that it heats the material so much that the order never restores, the timing of the second pulse has little to no effect, contrary to when the order is allowed to (partially) restore.
+I have corrected this in the caption.
+\\\\
+{\bf Page 68:}~{\it There is a rather cryptic reference to `topological defects' - please explain.}
+\\\\
+I have expanded the discussion to:
+``
+Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the PLD (Fig.~\ref{fig:Cr_schematic}(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single SDW wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the XFEL pulses had a diameter of 0.2 mm, w hich envelopes multiple SDW domains in the plane of the film\cite{Nicholson2016}, making the measurements statistical over domains.
+These considerations also support our previous claim that the optical pulses can be assumed to excite the thin film homogeneously.''
+\\\\
+{\bf Page 80:}~{\it I found the introduction to Chapter 5 rather unsatisfactory. Why is the problem of FE soft domain walls interesting/relevant (i.e., who cares)? The link to the possibility of using the described effect for information storage seems rather remote. It would be much preferable if a
+higher-level context was provided.}
+\\\\
+{\bf Page 82:}~{\it ``The longitudinal part... leads to the largest contribution...''. How universal is this statement? Is that `usually'?}
+\\\\
 
 \end{document}
